--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,6 +1,8 @@
 * {
   font-family: 'Abel', sans-serif;
+  color: #fff;
 }
 h1,h2,h3,h4,h5,h6,blockquote {
  font-family: 'Fondamento', cursive;
+ color: $yellow;
 }
