--- a/src/admin/styles.scss
+++ b/src/admin/styles.scss
@@ -9,7 +9,21 @@
 
 .btn {
   padding: 0;
+  color: inherit;
   &:hover {
     background: #222;
+    color: inherit;
   }
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+#layout {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  align-items: stretch;
 }
