--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,7 @@
 @import './colors';
 @import './typography';
+@import './layout';
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+@import "~bootstrap/scss/utilities";
