--- a/src/styles/prepend.scss
+++ b/src/styles/prepend.scss
@@ -21,6 +21,36 @@ $text: #ececec;
 $gold-dark: #e6af2e;
 $gold-light: #f5d061;
 
+$dimensions: (
+  10: 10%,
+  20: 20%,
+  25: 25%,
+  30: 30%,
+  33: 33.33%,
+  40: 40%,
+  50: 50%,
+  60: 60%,
+  66: 66.66%,
+  70: 70%,
+  75: 75%,
+  80: 80%,
+  90: 90%,
+  100: 100%,
+  auto: auto,
+);
+$utilities: (
+  "width": (
+    property: width,
+    class: w,
+    values: $dimensions,
+  ),
+  "height": (
+    property: height,
+    class: h,
+    values: $dimensions,
+  ),
+);
+
 @import "~bootstrap/scss/variables";
 
 @import "~bootstrap/scss/mixins";
